noinst_HEADERS =
noinst_HEADERS += machine/endian.h
noinst_HEADERS += sys/cdefs.h
noinst_HEADERS += sys/queue.h
noinst_HEADERS += sys/socket.h
noinst_HEADERS += sys/types.h
noinst_HEADERS += sys/time.h
noinst_HEADERS += sys/mman.h
noinst_HEADERS += sys/wait.h
noinst_HEADERS += err.h
noinst_HEADERS += ifaddrs.h
noinst_HEADERS += imsg.h
noinst_HEADERS += md5.h
noinst_HEADERS += sha2.h
noinst_HEADERS += signal.h
noinst_HEADERS += sha2_openbsd.h
noinst_HEADERS += Makefile.in
noinst_HEADERS += paths.h
noinst_HEADERS += poll.h
noinst_HEADERS += stdio.h
noinst_HEADERS += stdlib.h
noinst_HEADERS += string.h
noinst_HEADERS += time.h
noinst_HEADERS += tls.h
noinst_HEADERS += unistd.h
